[gd_scene load_steps=6 format=2]

[ext_resource path="res://Actors/SoftCollision.tscn" type="PackedScene" id=1]
[ext_resource path="res://Actors/Enemies/EnemyBase.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 0.01

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 8.0

[sub_resource type="CircleShape2D" id=3]
radius = 100.0

[node name="EnemyBase" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true
__meta__ = {
"_editor_description_": ""
}

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 2 )

[node name="SearchBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape" type="CollisionShape2D" parent="SearchBox"]
modulate = Color( 0.152941, 1, 0.101961, 1 )
shape = SubResource( 3 )

[node name="SearchTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="SoftCollision" parent="." instance=ExtResource( 1 )]

[node name="PathTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="NavigationLine" type="Line2D" parent="."]
width = 2.0
__meta__ = {
"_editor_description_": ""
}
